src/objects/SalesForce_Helpdesk__c.object
<CustomObject>
    <description>Object to track requested changes to existing SF fields, objects and processes; or new fields/processes.  Record types for both standard SF tracking and product management requests.</description>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Required__c</fullName>
        <label>Additional Information Required</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Admin_Recommendation__c</fullName>
        <description>Sys Admin only field - recommendation for approvals</description>
        <label>Admin Recommendation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Manager Approved</fullName>
                </value>
                <value>
                    <fullName>TriTech Sales Approved</fullName>
                </value>
                <value>
                    <fullName>TriTech Support Approved</fullName>
                </value>
                <value>
                    <fullName>Zuercher Sales Approved</fullName>
                </value>
                <value>
                    <fullName>Zuercher Support Approved</fullName>
                </value>
                <value>
                    <fullName>Request Recalled</fullName>
                </value>
                <value>
                    <fullName>Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <label>Approval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>Director or VP approval only</description>
        <label>Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesForce_Helpdesk1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesForce_Helpdesk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changes_to_Salesforce_Endeavor_required__c</fullName>
        <label>Changes to Salesforce/Endeavor required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_language_changes_assigned_to__c</fullName>
        <label>Contract language changes assigned to:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_language_updates_needed__c</fullName>
        <label>Contract language updates needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Write_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Write-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_PC_Meeting__c</fullName>
        <label>Date of PC Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussion_Points__c</fullName>
        <label>Discussion Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Endeavor_Case_Number__c</fullName>
        <inlineHelpText>If Endeavor customer support is required, the applicable case number for reference is listed here</inlineHelpText>
        <label>Endeavor Case Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardware/Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_deadline_for_changes_to_be_made__c</fullName>
        <label>If yes, deadline for changes to be made:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_yes_indicate_who_owns_the_action__c</fullName>
        <label>If yes, indicate who owns the action:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_when_will_training_be_completed__c</fullName>
        <label>If yes, when will training be completed?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_yes_who_requires_training__c</fullName>
        <label>If yes, who requires training?</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_who_will_provide_training__c</fullName>
        <label>If yes, who will provide training?</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Administrator_Resolution_Notes__c</fullName>
        <label>Internal Administrator/Resolution Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <inlineHelpText>(Business, Market, Competitive)</inlineHelpText>
        <label>Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Date__c</fullName>
        <label>Last Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Rejection_Date__c</fullName>
        <label>Last Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Comments__c</fullName>
        <label>Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesForce_Help_Desk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Request_Type__c</fullName>
        <label>Marketing Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
                <value>
                    <fullName>Fulfill</fullName>
                </value>
                <value>
                    <fullName>Brochures</fullName>
                    <isActive>false</isActive>
                    <label>Brochures</label>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                    <isActive>false</isActive>
                    <label>Case Study</label>
                </value>
                <value>
                    <fullName>Customer Profile</fullName>
                    <isActive>false</isActive>
                    <label>Customer Profile</label>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                    <isActive>false</isActive>
                    <label>Email Campaign</label>
                </value>
                <value>
                    <fullName>Info Sheets</fullName>
                    <isActive>false</isActive>
                    <label>Info Sheets</label>
                </value>
                <value>
                    <fullName>Invitation - Email, Registration, etc.</fullName>
                    <isActive>false</isActive>
                    <label>Invitation - Email, Registration, etc.</label>
                </value>
                <value>
                    <fullName>Invitation - Printed</fullName>
                    <isActive>false</isActive>
                    <label>Invitation - Printed</label>
                </value>
                <value>
                    <fullName>Marketing Video</fullName>
                    <isActive>false</isActive>
                    <label>Marketing Video</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Product Video</fullName>
                    <isActive>false</isActive>
                    <label>Product Video</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_changes_assigned_to__c</fullName>
        <label>Marketing changes assigned to:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_collateral_needed__c</fullName>
        <label>Marketing collateral needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operations_changes_assigned_to__c</fullName>
        <label>Operations changes assigned to:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_language_updates_needed__c</fullName>
        <label>Operations language updates needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Defects_Enhancements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Defects/Enhancements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_List_to_be_Updated__c</fullName>
        <label>Price List(s) to be Updated</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Rapid Implementation</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Proposal_Request_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing/Proposal Request Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - High</fullName>
                    <label>1 - High (Unable to Work)</label>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                    <default>true</default>
                    <label>3 - Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procurement_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TriTech</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Management_changes_assigned_to__c</fullName>
        <label>Product Management changes assigned to:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Management_write_ups_needed__c</fullName>
        <label>Product Management write-ups needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Pricelist__c</fullName>
        <label>Product Pricelist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Rapid Implementation</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_s_Impacted__c</fullName>
        <label>Product(s) Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>Inform Analytics</fullName>
                </value>
                <value>
                    <fullName>Inform CAD</fullName>
                </value>
                <value>
                    <fullName>Inform Jail</fullName>
                </value>
                <value>
                    <fullName>Inform Mobile</fullName>
                </value>
                <value>
                    <fullName>Inform RMS/FBR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tiburon TC/DN/TE</fullName>
                </value>
                <value>
                    <fullName>TriTech 911</fullName>
                </value>
                <value>
                    <fullName>TriTech IQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enhancement or longer term project</inlineHelpText>
        <label>Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REQUEST_COMPLETE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REQUEST COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RET_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RET Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REQUEST CANCELED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <inlineHelpText>Please provide all necessary information for the change requested and the expected outcome</inlineHelpText>
        <label>Request Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Change Management Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Assigned to Consultant</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <isActive>false</isActive>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                    <isActive>false</isActive>
                    <label>In Review</label>
                </value>
                <value>
                    <fullName>Project</fullName>
                    <isActive>false</isActive>
                    <label>Project</label>
                </value>
                <value>
                    <fullName>Testing</fullName>
                    <isActive>false</isActive>
                    <label>Testing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Changed from a multi-select to single picklist 1/12/18 and revised request types to consolidate</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Merge_Creation_Customer_#_Assignment</fullName>
                    <label>Account Merge/Creation/Customer # Assignment</label>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Customer Service Center Portal</fullName>
                </value>
                <value>
                    <fullName>Dataload</fullName>
                </value>
                <value>
                    <fullName>Email Template Creation/Modification</fullName>
                </value>
                <value>
                    <fullName>Endeavor_Approval_Process</fullName>
                    <label>Endeavor/Approval Process</label>
                </value>
                <value>
                    <fullName>Existing_Field_Change_New_Field_Page_Layout</fullName>
                    <label>Field Change/New Field/Page Layout</label>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Permissions/Licensing</fullName>
                    <label>Permissions/Licensing/User Updates</label>
                </value>
                <value>
                    <fullName>Process_Automation</fullName>
                    <label>Processes and Automation</label>
                </value>
                <value>
                    <fullName>Report or Dashboard</fullName>
                </value>
                <value>
                    <fullName>SalesForce for Outlook</fullName>
                </value>
                <value>
                    <fullName>Account Merge/Creation/Customer # Assignment</fullName>
                    <isActive>false</isActive>
                    <label>Account Merge/Creation/Customer # Assignment</label>
                </value>
                <value>
                    <fullName>Endeavor/Approval Process</fullName>
                    <isActive>false</isActive>
                    <label>Endeavor/Approval Process</label>
                </value>
                <value>
                    <fullName>Field Change/New Field/Page Layout</fullName>
                    <isActive>false</isActive>
                    <label>Field Change/New Field/Page Layout</label>
                </value>
                <value>
                    <fullName>Hierarchy Change</fullName>
                    <isActive>false</isActive>
                    <label>Hierarchy Change</label>
                </value>
                <value>
                    <fullName>Permissions/Licensing/User Updates</fullName>
                    <isActive>false</isActive>
                    <label>Permissions/Licensing/User Updates</label>
                </value>
                <value>
                    <fullName>Process Automation</fullName>
                    <isActive>false</isActive>
                    <label>Process Automation</label>
                </value>
                <value>
                    <fullName>Sworn Officer Update</fullName>
                    <isActive>false</isActive>
                    <label>Sworn Officer Update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Notes_to_User__c</fullName>
        <description>Visible to internal user</description>
        <label>Resolution Notes to User</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response_Time_Days_2__c</fullName>
        <formula>IF( Response_Time_Days__c &lt;= 2,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time (Days) &lt; 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time_Days__c</fullName>
        <formula>Round((Date_Completed__c - Date_Submitted__c),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Case_Number__c</fullName>
        <inlineHelpText>If SalesForce customer support is required, the applicable case number for reference is listed here</inlineHelpText>
        <label>SF Case Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBMIT_REQUEST__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to submit your request for review</inlineHelpText>
        <label>SUBMIT REQUEST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scott_Assistance_Time_Hours__c</fullName>
        <inlineHelpText>Please enter time in increments of .25 or more if applicable</inlineHelpText>
        <label>Scott Assistance Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>This_change_will_apply_to__c</fullName>
        <label>This change will apply to:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New quotes only</fullName>
                </value>
                <value>
                    <fullName>Current quotes will need to be updated as part of a review process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tickets_Work_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tickets/Work Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriTech_Sales_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sys admin field only for approval process</description>
        <label>TriTech Sales Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriTech_Support_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sys admin field only for approval process</description>
        <label>TriTech Support Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Will_training_be_required__c</fullName>
        <label>Will training be required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuercher_Sales_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sys admin field only for approval process</description>
        <label>Zuercher Sales Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuercher_Support_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sys admin field only for approval process</description>
        <label>Zuercher Support Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <label>SalesForce Help Desk</label>
    <listViews>
        <fullName>All_Helpdesk_Tickets</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Date_Needed__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Help Desk Tickets</label>
        <sharedTo>
            <group>Sys_Admin_Helpdesk</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Help_Desk_Completed_Requests_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Details__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Needed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesForce_Helpdesk__c.SalesForce_Request</value>
        </filters>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Help Desk - Completed Requests This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Sys_Admin_Helpdesk</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Helpdesk_Completed_Requests</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Details__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Needed__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesForce_Helpdesk__c.SalesForce_Request</value>
        </filters>
        <label>Help Desk - All Completed Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Sys_Admin_Helpdesk</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Helpdesk_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Project__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Details__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Needed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesForce_Helpdesk__c.SalesForce_Request</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>notEqual</operation>
            <value>Jenni Hastie</value>
        </filters>
        <label>Help Desk - All Open Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Helpdesk_Open_Requests_Jen</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Details__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Needed__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SalesForce_Helpdesk__c.SalesForce_Request</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Jen Vansant</value>
        </filters>
        <label>Help Desk - Open Requests: Jen</label>
        <sharedTo>
            <group>Sys_Admin_Helpdesk</group>
        </sharedTo>
    </listViews>
</CustomObject>